# learning-loop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json  lefthook.yml  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-native.yml
.planning/: verify-improvements.md
agents/: correction-analyser.md  diagram-rules.md  discovery-researcher.md  discovery-vault-scout.md  gap-analyser.md  inbox-organiser.md  ingest-context.md  ingest-linear.md  ingest-repo.md  literature-capturer.md  note-deepener.md  note-scorer.md  note-verifier.md  note-writer.md  refinement-proposer.md
agents/_skills/: blindspot-detection.md  capture-rules.md  claim-extraction.md  counter-argument-linking.md  coverage-mapping.md  cross-validation.md  decision-gates.md  discrimination.md  evidence-comparison.md  extract-insights.md  fleeting-sweep.md  overlap-check.md  preview-format.md  promote-gate.md  research-scaling.md  (+4 more)
guide/: agents.md  configuration.md  cross-platform.md  federation.md  resource-usage.md  search.md  troubleshooting.md  workflows.md
hooks/: _probe-subagent-start.js  dream-gate.js  hooks.json  post-read-retrieval.js  post-search-tracking.js  post-stop-reindex.js  post-tool-provenance.js  post-write-autolink.js  post-write-backlink.js  post-write-edge-infer.js  pre-compact.js  pre-write-check.js  session-label.js  session-start.js  stop-nudge.js
native/: .gitignore  Cargo.toml  README.md  build.rs
native/crates/ll-core/: Cargo.toml  LICENSE  README.md  build.rs
native/crates/ll-core/src/: embed.rs  graph.rs  lib.rs  rerank.rs  scoring.rs  store.rs
native/crates/ll-search/: Cargo.toml  build.rs
native/crates/ll-search/src/: embed.rs  main.rs  preprocess.rs  rerank.rs
native/crates/ll-search/src/db/: index.rs  mod.rs  query.rs  schema.rs
native/crates/ll-search/src/model/: benchmark.rs  bge_small.rs  mod.rs
native/crates/ll-search/src/search/: cluster.rs  eval.rs  federation.rs  graph.rs  mod.rs  query.rs  reflect.rs  scoring.rs  store.rs  tune.rs
native/crates/ll-search/src/sync/: auth.rs  client.rs  mod.rs  protocol.rs  visibility.rs  watch.rs
native/crates/ll-search/tests/: benchmark_baseline.sh  benchmark_results.txt
native/src/: db.rs  embed.rs  lib.rs  main.rs  nli.rs  preprocess.rs  search.rs
native/src/db/: mod.rs  schema.rs
native/src/model/: benchmark.rs  bge_small.rs  embeddinggemma.rs  loader.rs  mod.rs
native/src/search/: cluster.rs  eval.rs  federation.rs  graph.rs  mod.rs  query.rs  reflect.rs  scoring.rs  store.rs  test_helpers.rs  tune.rs
native/src/sync/: auth.rs  client.rs  config.rs  download.rs  export.rs  mod.rs  protocol.rs  watch.rs
native/tests/: benchmark_baseline.sh  benchmark_rerank.sh  test_sync.sh
provenance/: learned-patterns.md  retired-patterns.md
scripts/: .gitignore  apply-config.mjs  backfill-edges.mjs  cache-health-report.mjs  calibrate-classifier.mjs  check-deps.mjs  convergence-check.mjs  download-binary.mjs  edges-cli.mjs  fleeting-sweep.sh  install-cache-health.mjs  librarian.mjs  package-lock.json  provenance-consolidate.mjs  provenance-emit.js  provenance-report.mjs  provenance.mjs  refinement-candidates.mjs  refinement-validate.mjs  release.sh  resolve-paths.mjs  retraction-notify.mjs  retrieval-report.mjs  review-shadow.mjs  source-resolver.mjs  sweep-hook-replay.mjs  vault-search.mjs  vault-search.v1.mjs  verify-librarian-fixes.mjs  watch.mjs
tests/: archive-edge-preservation.test.mjs  common.test.mjs  dream-gate.test.mjs  edge-classifier-direction.test.mjs  edges-symmetric.test.mjs  inject.test.mjs  post-write-backlink.test.mjs  post-write-edge-infer.test.mjs  pre-write-check.test.mjs  retraction-notify.test.mjs  review-shadow.test.mjs  session-label.test.mjs  supersessions.test.mjs  voice-gate.test.mjs
(+41 files in other folders)
