[package]
name = "ll-search"
version = "1.10.3"
edition = "2021"
description = "Learning loop search binary -- SQLite + ONNX embeddings"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
anyhow = "1"
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
globset = "0.4"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
notify = "7"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
