[package]
name = "ll-core"
version = "0.1.1"
edition.workspace = true
description = "Hybrid semantic search engine: BM25 + vector + PageRank + cross-encoder reranking over SQLite, with on-device ONNX inference"
license = "MIT"
repository = "https://github.com/robinslange/learning-loop"
homepage = "https://github.com/robinslange/learning-loop"
readme = "README.md"
keywords = ["search", "embeddings", "rag", "onnx", "sqlite"]
categories = ["database", "science"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
